package pt.ipp.isep.dei.esoft.project.domain;

public class Owner {
    private String name;
    private int passportCardNumber;
}
