@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US007

class Owner{
name
citizenCardNumber
taxNumber
email
phoneNumber
}

class Address{
doorNumber
street
floorNumber
city
state
postalCode
}

class Agent{
name
citizenCardNumber
taxNumber
email
phoneNumber
}

class InitialData{
propertiesNumber
propertyType
saleOrRent
}

class Property{
location
area
distanceFromCityCenter
photographs
}

class Residence{
numberOfBedrooms
numberOfBathrooms
numberOfParkingSpaces
availableEquipment
}

class House{
basement
loft
sunExposure
}

class Apartment{
}
class Land{
}


Agent "1" -- "1  " Address : has an >

Owner "1" -- "0...*" InitialData : specify >
Owner "1" -- "1" Agent : selects >
Owner "1" -- "1" Address : has an >

InitialData "1" -- "1" Property : includes >

Property <|--  Residence
Property <|-- Land

Residence <|-- House
Residence <|-- Apartment

@enduml